// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component matches snapshot (all props set to user value) 1`] = `
<div
  className="bgColor--navy display--block padding--left--double padding--right--double padding--top--half padding--bottom--half inverted border--top border--bottom"
  style={
    Object {
      "backgroundClip": "border-box",
    }
  }
>
  Content
</div>
`;

exports[`Section component matches snapshot (default props) 1`] = `
<div
  className="bgColor--white display--block padding--left padding--right padding--top padding--bottom"
  style={
    Object {
      "backgroundClip": "border-box",
    }
  }
>
  Content
</div>
`;
